force-app/main/default/objects/ClaimParticipant__c/ClaimParticipant__c.object-meta.xml
<CustomObject>
    <label>Claim Participant</label>
    <nameField>
        <label>Claim Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>