force-app/main/default/objects/ClaimParticipant__c/fields/BirthDay__c.field-meta.xml
<CustomField>
    <fullName>BirthDay__c</fullName>
    <label>Date de Naissance</label>
    <type>Date</type>
</CustomField>