force-app/main/default/objects/ClaimParticipant__c/fields/Civilite__c.field-meta.xml
<CustomField>
    <fullName>Civilite__c</fullName>
    <label>Civilité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>