force-app/main/default/objects/ClaimParticipant__c/fields/DateDeces__c.field-meta.xml
<CustomField>
    <fullName>DateDeces__c</fullName>
    <label>Date de décès</label>
    <type>Date</type>
</CustomField>