force-app/main/default/objects/ClaimParticipant__c/fields/IPP__c.field-meta.xml
<CustomField>
    <fullName>IPP__c</fullName>
    <label>IPP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>