force-app/main/default/objects/ClaimParticipant__c/fields/isDriver__c.field-meta.xml
<CustomField>
    <fullName>isDriver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participant est conducteur ?</label>
    <type>Checkbox</type>
</CustomField>