force-app/main/default/objects/ClaimParticipant__c/fields/isOwner__c.field-meta.xml
<CustomField>
    <fullName>isOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOwner</label>
    <type>Checkbox</type>
</CustomField>