force-app/main/default/objects/ClaimParticipant__c/fields/ITT__c.field-meta.xml
<CustomField>
    <fullName>ITT__c</fullName>
    <label>ITT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>