force-app/main/default/objects/ClaimParticipant__c/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <label>Situation familiale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Célibataire</fullName>
            </value>
            <value>
                <fullName>Séparé(e)</fullName>
            </value>
            <value>
                <fullName>Divorcé(e)</fullName>
            </value>
            <value>
                <fullName>Marié(e)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>