force-app/main/default/objects/ClaimParticipant__c/fields/NumeroContratAssurance__c.field-meta.xml
<CustomField>
    <fullName>NumeroContratAssurance__c</fullName>
    <description>Numéro de contrat d assurance de la partie adverse</description>
    <label>N° de contrat d assurance</label>
    <length>100</length>
    <type>Text</type>
</CustomField>