force-app/main/default/objects/ClaimParticipant__c/fields/ParticipantAccount__c.field-meta.xml
<CustomField>
    <fullName>ParticipantAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom et Prénom</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claim Participants</relationshipLabel>
    <relationshipName>Claim_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>