force-app/main/default/objects/ClaimParticipant__c/fields/ParticipantCNI__c.field-meta.xml
<CustomField>
    <fullName>ParticipantCNI__c</fullName>
    <formula>ParticipantAccount__r.CIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNI</label>
    <type>Text</type>
</CustomField>