force-app/main/default/objects/ClaimParticipant__c/fields/Passager__c.field-meta.xml
<CustomField>
    <fullName>Passager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant de l&apos;accident</label>
    <referenceTo>Passager__c</referenceTo>
    <relationshipLabel>Claim Participants</relationshipLabel>
    <relationshipName>Claim_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>