force-app/main/default/objects/ClaimParticipant__c/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays du participant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pays</valueSetName>
    </valueSet>
</CustomField>