force-app/main/default/objects/ClaimParticipant__c/fields/PaysCompagnieAdverse__c.field-meta.xml
<CustomField>
    <fullName>PaysCompagnieAdverse__c</fullName>
    <description>Pays de la compagnie adverse</description>
    <label>Pays du compagnie adverse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maroc</fullName>
            </value>
            <value>
                <fullName>Gabon</fullName>
            </value>
            <value>
                <fullName>Tunisie</fullName>
            </value>
            <value>
                <fullName>Algerie</fullName>
                <label>Algérie</label>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Senegal</fullName>
                <label>Sénégal</label>
            </value>
            <value>
                <fullName>CoteIvoire</fullName>
                <label>Côte d Ivoire</label>
            </value>
            <value>
                <fullName>Cameroun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>