force-app/main/default/objects/ClaimParticipant__c/fields/RevenuAnnuel__c.field-meta.xml
<CustomField>
    <fullName>RevenuAnnuel__c</fullName>
    <label>Revenu annuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>