force-app/main/default/objects/ClaimParticipant__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passager assuré</fullName>
            </value>
            <value>
                <fullName>Passager adverse</fullName>
            </value>
            <value>
                <fullName>Autres partie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>