force-app/main/default/objects/ClaimParticipant__c/fields/Sexe__c.field-meta.xml
<CustomField>
    <fullName>Sexe__c</fullName>
    <label>Sexe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Féminin</fullName>
            </value>
            <value>
                <fullName>Masculin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>