force-app/main/default/objects/ClaimParticipant__c/fields/StateOfPerson__c.field-meta.xml
<CustomField>
    <fullName>StateOfPerson__c</fullName>
    <label>Etat du Participant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indemne</fullName>
            </value>
            <value>
                <fullName>Blessé</fullName>
            </value>
            <value>
                <fullName>Décédé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>