force-app/main/default/objects/ClaimParticipant__c/fields/TypeContact__c.field-meta.xml
<CustomField>
    <fullName>TypeContact__c</fullName>
    <label>Type de Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Téléphone</fullName>
            </value>
            <value>
                <fullName>Mail et Téléphone</fullName>
                <default>true</default>
                <label>Mail et Téléphone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>