force-app/main/default/objects/ClaimParticipant__c/fields/TypePartieAdverse__c.field-meta.xml
<CustomField>
    <fullName>TypePartieAdverse__c</fullName>
    <description>Type de la partie adverse (Animal, Charrette, Cyclomoteur, Pieton, Objet, Autre)</description>
    <label>Type partie adverse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal</fullName>
            </value>
            <value>
                <fullName>Charrette</fullName>
            </value>
            <value>
                <fullName>Cyclomoteur</fullName>
            </value>
            <value>
                <fullName>Pieton</fullName>
            </value>
            <value>
                <fullName>Objet</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>