force-app/main/default/objects/ClaimParticipant__c/fields/Vehicule__c.field-meta.xml
<CustomField>
    <fullName>Vehicule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Véhicule</label>
    <referenceTo>Vehicule__c</referenceTo>
    <relationshipLabel>Participants de l&apos;accident</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>